refactor: use assert import to import css style

--- a/example/simple.html
+++ b/example/simple.html
@@ -1,6 +1,6 @@
 <html><head>
 
-  <script defer type="module" src="../src/tab-panel.js"></script>
+  <script defer type="module" src="../dist/tab-panel.js"></script>
   <meta name="viewport" content="width=device-width" />
 
   <!-- customize as desired -->
